# display_as_debug

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: audit.yml  build.yml  coverage.yml  docs.yml
examples/: error_comparison.rs  error_from_main.rs
src/: debug_as_display.rs  debug_struct_ext.rs  debug_tuple_ext.rs  display_as_debug.rs  lib.rs  opaque.rs  type_name.rs
src/as_debug/: as_display_debug.rs  as_display_wrapper.rs  display_as_debug.rs  display_debug.rs  display_debugged.rs  display_wrapper.rs  mod.rs
src/as_display/: as_debug_display.rs  as_debug_wrapper.rs  debug_as_display.rs  debug_display.rs  debug_displayed.rs  debug_wrapper.rs  mod.rs
src/debug/: display_as_debug.rs  display_debug.rs  display_for_debug.rs  mod.rs
src/display/: debug_as_display.rs  debug_display.rs  debug_for_display.rs  mod.rs
src/fmt/: fold_mut.rs  list.rs  map.rs  mod.rs  set.rs  struct.rs  tuple.rs
src/option/: debug_option.rs  extension.rs  mod.rs  opaque_dbg.rs  opaque_option.rs  type_debug.rs  type_name_option.rs
src/result/: debug_result.rs  extension.rs  mod.rs  opaque_dbg.rs  opaque_result.rs  type_debug.rs  type_name_result.rs
src/types/: mod.rs  obscure_list.rs  opaque.rs  opaque_list.rs  test_value.rs  type_name.rs  type_name_list.rs
src/wrap/: debug_as_display.rs  display_as_debug.rs  mod.rs  opaque.rs  type_name.rs
tests/: debug_list.rs  debug_map.rs  debug_set.rs  debug_struct.rs  debug_tuple.rs  fmt_types.rs  hiders.rs  opaque.rs  type_name.rs  wrapper_tests.rs  wrappers.rs
tests/common/: mod.rs
tests/debug_fmt/: debug_set.rs
tests/fmt/: debug_list.rs  debug_map.rs  debug_struct.rs  debug_tuple.rs  main.rs
tests/types/: main.rs  type_name.rs  type_name_list.rs  type_name_set.rs
tests/wrap/: debug_as_display.rs  display_as_debug.rs  main.rs  opaque.rs  type_name.rs  (+2 more)
(+42 files in other folders)
