[package]
name = "display_as_debug"
version = "0.5.0"
edition = "2024"
rust-version = "1.85.1"
authors = ["Austin Stanley <maxtmahem@gmail.com>"]
description = "Enables a rust types display implementation to be used as its debug implementation."
repository = "https://github.com/MaxMahem/display_as_debug"
homepage = "https://github.com/MaxMahem/display_as_debug"
documentation = "https://MaxMahem.github.io/display_as_debug/index.html"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["debug", "display", "formatting", "error-handling"]
categories = ["development-tools::debugging", "rust-patterns"]

[dependencies]
derive_more = { version = "2.1.1", default-features = false, features = ["from", "deref", "as_ref", "into"] }
sealed = "0.6.0"
